--- a/Design_sources.css
+++ b/Design_sources.css
@@ -272,7 +272,7 @@ header {
 
 
 .fali_mob{
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     font-size: 80px;
