--- a/Design.css
+++ b/Design.css
@@ -429,14 +429,19 @@ html::-webkit-scrollbar {
     font-size: large;
     line-height: 110%;
     font-weight: light;
+    width: 90%;
 }
 .abt3090{
     font-size: large;
     line-height: 110%;
     font-weight: light;
+    width: 90%;
+
 }
 .abt4090{
     font-size: large;
     line-height: 110%;
     font-weight: light;
+    width: 90%;
+
 }
