--- a/Design_sources.css
+++ b/Design_sources.css
@@ -211,11 +211,13 @@ header {
     .content{
         display: none;
     }
-    .content_mob{
-        display: initial;
-    }
+}
+@media(min-width:1250px){
     .fali_mob{
-        display: initial;
+        display: none;
+    }
+    .content_mob{
+        display: none;
     }
 }
 .back {
@@ -272,7 +274,7 @@ header {
 
 
 .fali_mob{
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     font-size: 80px;
@@ -293,7 +295,7 @@ header {
 .content_mob h1 {
 	color: #fff;
 	position: absolute;
-	transform: translate(-50%, 0%);
+	transform: translate(-50%, -50%);
 }
 
 .content_mob h1:nth-child(1) {
