--- a/Design.css
+++ b/Design.css
@@ -427,20 +427,20 @@ html::-webkit-scrollbar {
 }
 .abt3080{
     font-size: large;
-    line-height: 110%;
+    line-height: 25px;
     font-weight: light;
     width: 90%;
 }
 .abt3090{
     font-size: large;
-    line-height: 110%;
+    line-height: 25px;
     font-weight: light;
     width: 90%;
 
 }
 .abt4090{
     font-size: large;
-    line-height: 110%;
+    line-height: 25px;
     font-weight: light;
     width: 90%;
 
