--- a/Design.css
+++ b/Design.css
@@ -171,7 +171,7 @@ header {
     filter: drop-shadow(5px 5px 5px #3b3b3b);
     transform: rotate(0deg);
     transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
-    animation: 0.5s ease-out 0s 1 slideInFromLeft;
+    animation: 0.5s ease-out 0s 1 slideInFromLeft, 0.5s ease-in-out 2s 2 shake;
 }
 
 .g4090:hover {
@@ -192,7 +192,7 @@ header {
     filter: drop-shadow(5px 5px 5px #3b3b3b);
     transform: rotate(0deg);
     transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
-    animation: 0.5s ease-out 0s 1 slideInFromRight;
+    animation: 0.5s ease-out 0s 1 slideInFromRight, 0.5s ease-in-out 4s 2 shake;
 }
 
 .g3090:hover {
@@ -213,7 +213,7 @@ header {
     filter: drop-shadow(5px 5px 5px #3b3b3b);
     transform: rotate(0deg);
     transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
-    animation: 0.5s ease-out 0s 1 slideInFromLeft;
+    animation: 0.5s ease-out 0s 1 slideInFromLeft, 0.5s ease-in-out 6s 2 shake;
 }
 
 .g3080:hover {
@@ -445,4 +445,9 @@ html::-webkit-scrollbar {
     font-weight: light;
     width: 90%;
 
+}
+@keyframes shake{
+    0% {transform: rotate(0deg);}
+    50% {transform: rotate(5deg);}
+    100% {transform: rotate(0deg);}
 }
