--- a/Design_cp.css
+++ b/Design_cp.css
@@ -269,8 +269,20 @@ header {
     transition: color 0.5s ease-in-out;
 	animation: animate 4s ease-in-out infinite;
 }
-
-
+.spline{
+    width: 100%;
+    height: 450px;
+    margin-top: 10%;
+}
+.game{
+    font-size: 35px;
+    font-family: 'SF-Pro-Display';
+    font-weight: light;
+    display: flex;
+    justify-content: center;
+    color: antiquewhite;
+    align-items: center;
+}
 .fali_mob{
     display: flex;
     align-items: center;
