--- a/Design_sources.css
+++ b/Design_sources.css
@@ -231,6 +231,15 @@ header {
     text-decoration: underline;
     transition: color 0.5s ease-in-out;
 }
+.game{
+    font-size: 35px;
+    font-family: 'SF-Pro-Display';
+    font-weight: light;
+    display: flex;
+    justify-content: center;
+    color: antiquewhite;
+    align-items: center;
+}
 .back:hover {
     color: rgb(0, 247, 255);
 }
@@ -338,4 +347,10 @@ header {
 			0% 100%
 		);
 	}
+}
+
+.spline{
+    width: 100%;
+    height: 450px;
+    margin-top: 10%;
 }
