--- a/Design_sources.css
+++ b/Design_sources.css
@@ -207,6 +207,7 @@ header {
     }
     .fali{
         display: none;
+        padding-bottom: 0px;
     }
     .content{
         display: none;
@@ -227,9 +228,9 @@ header {
     display: flex;
     justify-content: center;
     color: antiquewhite;
-    align-items: center;
+    align-items: last baseline;
     text-decoration: underline;
-    transition: color 0.5s ease-in-out;
+    transition: color 0.5s ease-in-out;    
 }
 .game{
     font-size: 35px;
@@ -248,7 +249,7 @@ header {
     align-items: center;
     justify-content: center;
     font-size: 250px;
-
+    padding-bottom: 75px;
 }
 
 .content h1:nth-child(2):hover {
@@ -284,6 +285,7 @@ header {
     align-items: center;
     justify-content: center;
     font-size: 80px;
+    padding-bottom: 5px;
 }
 
 .content_mob h1:nth-child(1):hover {
@@ -354,3 +356,10 @@ header {
     height: 450px;
     margin-top: 10%;
 }
+/* .backd{
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    right: 50%;
+    display: inline-block;
+} */
